gcc/testsuite/gdc.test/fail_compilation/fail3731.d

void main()
{
    class C {}
    class D : C {}
    auto x = new immutable(D);
    C y = x;
}
